Added team and role

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
 <body>
-Дмитров Александр Александрови<br>ИДМ-20-01<br>
+Дмитров Александр Александрович<br>ИДМ-20-01<br>TheTeam<br>Программист (Backend)
 </body>
 </html>
